minio/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"minio","namespace":"minio"},"spec":{"ports":[{"port":9000,"targetPort":9000}],"selector":{"app":"minio"},"type":"ClusterIP"}}
  creationTimestamp: "2021-07-08T14:48:32Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":9000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":9001,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: oc
    operation: Update
    time: "2021-07-08T14:58:15Z"
  name: minio
  namespace: minio
  resourceVersion: "337887"
  selfLink: /api/v1/namespaces/minio/services/minio
  uid: 05c8d221-1ab4-40ab-952e-99c7a29ebf71
spec:
  clusterIP: 172.30.57.112
  clusterIPs:
  - 172.30.57.112
  ports:
  - name: data
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
